# rick-roll

./: Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml
data/: db.sqlite
src/: main.rs
