[package]
name = "rick-roll"
version = "0.1.0"
authors = ["xethlyx <46338199+xethlyx@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["sqlite_pool"] }
rusqlite = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
rand = "0.8.3"
